# clean

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md
crates/sibylline-clean/: Cargo.toml
crates/sibylline-clean-python/: Cargo.toml
crates/sibylline-clean-python/src/: lib.rs
crates/sibylline-clean-wasm/: Cargo.toml  package.json
crates/sibylline-clean-wasm/src/: lib.rs
crates/sibylline-clean/src/: crf_features.rs  lib.rs  motif_matching.rs  normalizer.rs  pattern_matching.rs  types.rs
scripts/: analyze_crf_failures.py  train_classifier.py
src/: README.md
src/sibylline_clean/: __init__.py  _native.pyi  classifier.py  config.py  detector.py  embedder.py  motifs.py  normalizer.py  patterns.py  windowing.py
src/sibylline_clean/benchmarks/: __init__.py  __main__.py  metrics.py  promptshield.py
src/sibylline_clean/content/: __init__.py  annotators.py  extractors.py  heat.py  scanner.py  spans.py
src/sibylline_clean/methods/: __init__.py  base.py  crf.py  heuristic.py  promptshield.py
src/sibylline_clean/models/: prompt_injection_rf.pkl
src/sibylline_clean/pattern_data/_defaults/: en.yaml  it.yaml
tests/: conftest.py
tests/integration/: test_benchmark_metrics.py  test_content_integration.py  test_detector.py  test_methods.py  test_multilingual.py  test_promptshield_method.py
tests/parity/: test_native_parity.py
tests/unit/: test_classifier.py  test_content_scanner.py  test_crf_spans.py  test_motifs.py  test_normalizer.py  test_patterns.py  test_registry.py  test_windowing.py
